--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "ev3dev",
-  "version": "0.9.2-alpha",
+  "version": "0.9.2",
   "description": "An interface to control an EV3 running ev3dev from JavaScript.",
   "keywords": [
     "ev3dev",
     "ev3",
-    "lego"
+    "lego",
+    "robotics"
   ],
   "homepage": "http://github.com/ev3dev/ev3dev-lang",
   "bugs": {
