Add comment documentation and update build script to generate docs pages

--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
     "name": "WasabiFan",
     "email": "WasabiFan@outlook.com"
   },
-  "dependencies": {
-    
-  },
+  "dependencies": {},
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-shell": "^1.0.1",
+    "grunt-typedoc": "^0.2.2",
+    "grunt-typescript": "^0.7.0",
     "typescript": ">=1.0.0"
   },
   "scripts": {
