Add initial version of tests
Currently just tests core device class

--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
-    "grunt-contrib-watch": "^0.6.1",
     "grunt-shell": "^1.0.1",
     "grunt-typedoc": "0.2.3",
     "grunt-typescript": "^0.8.0",
-    "typescript": ">=1.0.0"
+    "typescript": ">=1.0.0",
+    "python-shell": "*"
   },
   "scripts": {
     
