--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "ev3dev-lang"]
 	path = ev3dev-lang
 	url = https://github.com/ev3dev/ev3dev-lang
+[submodule "test/fake-sys"]
+	path = test/fake-sys
+	url = https://github.com/ddemidov/ev3dev-lang-fake-sys.git
