Use full path to mocha

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "python-shell": "*"
   },
   "scripts": {
-    "test": "grunt tsc && mocha"
+    "test": "grunt tsc && ./node_modules/mocha/bin/mocha"
   },
   "files": [
     "bin/"
