--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "grunt-cli": "^0.1.13",
     "grunt-shell": "^1.0.1",
     "grunt-typedoc": "0.2.3",
-    "grunt-typescript": "^0.8.0",
+    "grunt-ts": "5.5.0-beta.2",
     "typescript": ">=1.8.0",
     "mocha": "2.3.4",
     "python-shell": "*"
