--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
 	"compilerOptions": {
 		"sourceMap": true,
 		"declaration": true,
-		"target": "ES5",
+		"target": "es5",
 		"module": "commonjs",
 		"outDir": "bin/"
 	}
