Add bluebird lib

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "name": "WasabiFan",
     "email": "WasabiFan@outlook.com"
   },
-  "dependencies": {},
+  "dependencies": {
+      "bluebird": "3.3.4"
+  },
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
